# sc2-ai-coach

./: .coveragerc  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  Installation.md  LICENSE  Mineral Micro.ipynb  README.md  aicoach.py  build.py  cleanup.py  coach.py  config.py  config.yml  environment-cp310.yml  environment-cp311-ci.yml  environment-cp311-minimal.yml  environment-cp311.yml  environment-locked.yml  environment.yml  log.py  obs_client.py  obs_watcher.py  parse_map_loading_screen.py  pyproject.toml  repcli.py  replaydb.py  replaystats.py  requirements-build.txt  requirements.txt  sc2stats.py  server.err  shared.py  smurf.py  splitanalysis.py
.github/: copilot-instructions.md
.github/agents/: ralph-loop.agent.md
.github/workflows/: ci.yml  lint.yml  update-assistant.yml
aicoach/: __init__.py  aicoach.py  aicoach_mock.py  initial_instructions.txt  prompt.py  prompt_new_replay.txt  prompt_scanner.txt  transcribe.py  util.py  utils.py
aicoach/functions/: AddMetadata.py  AddPlayerTags.py  GetCurrentGameInfo.py  LookupPlayer.py  ParseReplay.py  QueryReplayDB.py  __init__.py  base.py
aicoach/prompts/: additional_instructions.jinja2  init_twitch.jinja2  initial_instructions.jinja2  new_game.jinja2  new_replay.jinja2  rematch.jinja2  scanner.jinja2  summary.jinja2  tags.jinja2  twitch.jinja2  twitch_raid.jinja2
archive/: replaystats.py  splitanalysis.py
archive/daily-stats/: sc2stats_server.py  template.html
deploy/: Dockerfile  docker-compose.yml
docs/: architecture.md
docs/adr/: 0001-eliminate-ambient-runtime-state.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/spec/: api.md  migrate-assistant-progress.md  migrate-assistant.md  webapp.md
mongodb/: README.md  backup.nu  docker-compose.yml  export.nu
mongodb/mongo-init/: mongo-init.js
mongodb/mongo-seed/: import.sh
obs_tools/: __init__.py  battlenet.py  mapstats.py  mic.py  obs_watcher.py  parse_map_loading_screen.py  playerinfo.py  rich_log.py  say.py  sc2client.py  sc2pulse.py  smurfs.py  tts.py  twitch.py  types.py  wake.py  wakekey.py  wakeword.py
obs_tools/events/: clientapi.py  parse_map_loading_screen.py  types.py  wakekey.py
obs_tools/io/: rich_log.py  tts.py
obs_tools/lib/: battlenet.py  sc2client.py  sc2pulse.py
playground/: Replay Stats.ipynb  Smurfdetection.ipynb  download_sprites.py  emojis.txt  example_styles.css  playrich.py  remove_conversation_titles.py  sc2assistant.py  select_microphone.py  sprites.txt  ssim_report.py  twitch.py  whisper_benchmark.py
playground/wakeword/: .gitignore  train.py  train_config.yaml
replays/: __init__.py  db.py  metadata.py  newreplay.py  reader.py  repcli.py  replaydb.py  types.py  util.py
replays/sc2readerplugins/: ReplayStats.py  SpawningTool.py  splitanalysis.py  statistics.py
sc2readerplugins/: SpawningTool.py  statistics.py
spec/: api.md  architecture.md  migrate-assistant-progress.md  migrate-assistant.md  pyodmongo.md
src/: __init__.py  coach.py  contracts.py  log.py  mapstats.py  matchhistory.py  obs_client.py  playeridentity.py  playerinfo.py  playerresolver.py  pricing.py  repcli.py  sc2reader.pyi  session.py  smurfs.py  util.py
src/ai/: __init__.py  aicoach.py  aicoach_mock.py  openai_provider.py  prompt.py  state.py  utils.py
src/api/: __init__.py  __main__.py  app.py  config.py  contracts.py  conversation_types.py  conversations.py  errors.py  generic_resources.py  map_stats.py  models.py  players.py  replays.py  resources.py  sessions.py  state.py  validation.py  webapp.py
src/events/: __init__.py  clientapi.py  events.py  loading_screen.py  newreplay.py  parse_map_loading_screen.py  twitch.py  types.py  wake_key.py  wake_livekit.py  wake_oww.py  wake_porcupine.py  wakekey.py  wakeword.py
src/io/: __init__.py  dummy.py  mic.py  rich_log.py  transcribe.py  transcribe_qwen.py  transcribe_whisper.py  transcribe_xai.py  tts.py
src/iosvc/: __init__.py  dummy.py  mic.py  rich_log.py  transcribe_qwen.py  transcribe_whisper.py  transcribe_xai.py  tts.py
src/lib/: battlenet.py  sc2client.py  sc2pulse.py
src/persistence/: __init__.py  conversation_store.py  database.py  replay_store.py  runtime.py  session_store.py
src/replaydb/: db.py  reader.py  types.py  util.py
src/replays/: __init__.py  reader.py  types.py
src/runtime/: audio_devices.py  playeridentity.py  settings.py
templates/: map_stats.jinja2
templates/prompts/: additional_instructions.jinja2  cast_replay.jinja2  new_game.jinja2  new_replay.jinja2  rematch.jinja2
tests/: conftest.py  critic.py  mocks.py  test_aicoach.py  test_coach.py  test_config.py  test_external.py  test_metadata.py  test_obs_tools.py  test_parse_map_screen.py  test_replaydb.py
tests/fixtures/: Equilibrium LE (84).SC2Replay  Site Delta LE (88).SC2Replay
tests/integration/: test_aicoach.py  test_api_conversations.py  test_api_health.py  test_api_map_stats.py  test_api_metadata.py  test_api_players.py  test_api_replays.py  test_api_sessions.py  test_api_tools.py  test_api_webapp.py  test_battlenet.py  test_coach.py  test_db.py  test_mapstats.py  test_metadata.py  test_obs_tools.py  test_parse_loading_screen.py  test_playerinfo.py  test_sc2apiclient.py  test_smurf.py  test_twitch.py  test_twitch_mocked.py  test_voice_io.py
tests/llm/: test_aicoach.py  test_critic_chat.json  test_critic_chat.py  test_critic_replay.json  test_critic_replay.py  test_critic_smurfing.json  test_critic_smurfing.py  test_function_metadata.py  test_replay_cast.py  test_replay_timestamps.py  test_twitch_chat.py
tests/support/: container_services.py  fake_openai.py  pytest_services.py
tests/unit/: test_admin_api.py  test_admin_conversation_review.py  test_admin_generic_resources.py  test_admin_player_review.py  test_admin_replay_review.py  test_ai_state.py  test_aicoach_responses.py  test_aifunctions.py  test_api_sessions.py  test_audio_devices.py  test_coach_entrypoint.py  test_coach_text_chat.py  (+25 more)
webapp/: index.html  package-lock.json  package.json  server.err  tsconfig.json  unit_icon_map.json  vite.config.ts
(+158 files in other folders)
