[project]
name = "sc2-ai-coach"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "blizzardapi2>=1.1.3",
    "click>=8.1.8",
    "climage>=0.2.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "keyboard>=0.13.5",
    "openai>=1.62.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "pymongo>=4.11.1",
    "pyodmongo>=1.4.6",
    "python-levenshtein>=0.26.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "sc2reader",
    "sc2reader-plugins",
    "spawningtool",
    "tabulate>=0.9.0",
    "tiktoken>=0.8.0",
    "watchdog>=6.0.0",
]


[project.scripts]
coach = "coach:main"

[project.optional-dependencies]
standard = [
    "numpy>=2.2.2",
    "obsws-python>=1.7.1",
    "opencv-python>=4.11.0.86",
    "openwakeword>=0.6.0",
    "pyaudio>=0.2.14",
    "transformers>=4.48.3",
    "twitchapi>=4.4.0",
]

[tool.uv.sources]
sc2reader-plugins = { git = "https://github.com/NumberPigeon/sc2reader-plugins.git" }
spawningtool = { git = "https://github.com/StoicLoofah/spawningtool.git", rev = "master" }
sc2reader = { git = "https://github.com/ggtracker/sc2reader.git", rev = "upstream" }

[dependency-groups]
dev = [
    "parametrize-from-file>=0.20.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]
