[project]
name = "sc2-ai-coach"
version = "0.6.0"
requires-python = ">=3.12,<3.14"
readme = "README.md"
dependencies = [
  "blizzardapi2>=4.0.2",
  "click>=8.3.3",
  "fastapi>=0.116.1",
  "climage>=0.2.2",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "keyboard>=0.13.5",
  "openai>=2.33.0",
  "pandas>=3.0.2",
  "pydantic>=2.13.3",
  "pydantic-settings>=2.14.0",
  "pyodmongo>=1.7.0",
  "python-levenshtein>=0.26.1",
  "pyyaml>=6.0.3",
  "rich>=15.0.0",
  "sc2reader",
  "sc2reader-plugins",
  "spawningtool",
  "tabulate>=0.10.0",
  "uvicorn>=0.35.0",
  "watchdog>=6.0.0",
]

[project.optional-dependencies]
standard = [
  "numpy",
  "obsws-python>=1.7.1",
  "opencv-python>=4.11.0.86",
  "pyaudio>=0.2.14",
  "realtimetts[kokoro,system]>=0.7.3",
  "soundfile>=0.13.1",
  "speechrecognition[audio]>=3.14.1",
  "tesserocr @ https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.8.0-tesseract-5.5.0/tesserocr-2.8.0-cp312-cp312-win_amd64.whl ; sys_platform == 'win32'",
  "tesserocr>=2.8.0 ; sys_platform != 'win32'",
  "twitchapi>=4.4.0",
]
ci = [
  "numpy",
  "opencv-python>=4.11.0.86",
  "tesserocr @ https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.8.0-tesseract-5.5.0/tesserocr-2.8.0-cp312-cp312-win_amd64.whl ; sys_platform == 'win32'",
  "tesserocr>=2.8.0 ; sys_platform != 'win32'",
]
whisper = [
  #"flash-attn>=2.7.0.post2",
  "scipy>=1.15.1",
  "torch>=2.6.0",
  "transformers>=4.48.3",
  "webrtcvad>=2.0.10",
]
nemo = [
  "nemo-toolkit[asr]>=2.7.2",
]
livekit = [
    "livekit-wakeword[eval,export,train]>=0.2.1",
    "torchaudio>=2.6.0",
]


[tool.uv.sources]
sc2reader-plugins = { git = "https://github.com/NumberPigeon/sc2reader-plugins.git" }
spawningtool = { git = "https://github.com/StoicLoofah/spawningtool.git", rev = "master" }
sc2reader = { git = "https://github.com/ggtracker/sc2reader.git", rev = "upstream" }
torch = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[dependency-groups]
dev = [
  "docker>=7.1.0",
  "ninja>=1.11.1.3",
  "packaging>=24.2",
  "parametrize-from-file>=0.20.0",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "testcontainers[mongodb]>=4.13.2",
  "pytest-mock>=3.14.0",
  "respx>=0.22.0",
  "ruff>=0.13.0",
  "setuptools>=75.8.0",
  "tiktoken>=0.12.0",
  "pre-commit>=4.6.0",
]


[tool.uv]
default-groups = ["dev"]
no-build-isolation-package = ["flash-attn"]
environments = [
  "sys_platform == 'win32'",
  "sys_platform == 'linux'",
]


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "coach",
  "repcli",
  "obs_client",
  "log",
  "shared",
  "contracts",
  "mapstats",
  "matchhistory",
  "playeridentity",
  "playerresolver",
  "session",
  "util",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[project.scripts]
coach = "coach:main"
repcli = "repcli:cli"
obs_client = "obs_client:main"

[tool.ruff]
lint.per-file-ignores = { "tests/*" = ["F841"] }  # ignore "unused variable" in tests
exclude = [
"playground/",
"external/"
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
markers = [
  "mongo: uses a real MongoDB test service",
]

[tool.pyright]
include = [
    "src",
    "tests",
]

typeCheckingMode = "standard"

exclude = [
    "playground",
    "**/__pycache__",
    "**/node_modules",
    "**/.*",
    ".venv",
    "venv",
]
reportMissingTypeStubs = "none"
